--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Aidan Waterman
 description: Personal Website/Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/aidanh2oman/aidanh2oman.github.io/master/images/Writable Wallpaper Landscape Concept.png
+avatar: https://raw.githubusercontent.com/aidanh2oman/aidanh2oman.github.io/master/images/writable-landscape.png
 
 #
 # Flags below are optional
